[package]
name = "ham2k-polo-wasm"
version = "25.8.1"
edition = "2021"
description = "Ham2K Portable Logger - Rust+WASM backend"
license = "MPL-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "Window",
]

[profile.release]
opt-level = "s"  # Optimize for size
lto = true
codegen-units = 1